[gd_scene load_steps=8 format=3 uid="uid://bn35oxo1fxves"]

[ext_resource type="Script" path="res://Dialogue/camper_npc.gd" id="1_5at4s"]
[ext_resource type="Texture2D" uid="uid://c8oirshyacniv" path="res://Assets/sprites/NPC folder/boy camper.png" id="1_mbxvl"]
[ext_resource type="PackedScene" uid="uid://blcxiw1tff24y" path="res://Dialogue/camper_d.tscn" id="2_11bsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dtdxc"]
atlas = ExtResource("1_mbxvl")
region = Rect2(0, 0, 39, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_as8g3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtdxc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoitk"]
size = Vector2(14, 23)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6eyk0"]
radius = 16.0
height = 54.0

[node name="Camper NPC" type="CharacterBody2D"]
script = ExtResource("1_5at4s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(53.75, 60)
scale = Vector2(0.576923, 0.653846)
sprite_frames = SubResource("SpriteFrames_as8g3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(54, 61)
shape = SubResource("RectangleShape2D_eoitk")

[node name="chat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection"]
position = Vector2(53, 68)
shape = SubResource("CapsuleShape2D_6eyk0")

[node name="Camper_D" parent="." instance=ExtResource("2_11bsa")]
offset_left = 31.0
offset_top = 27.0
offset_right = 31.0
offset_bottom = 27.0

[connection signal="body_entered" from="chat_detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chat_detection" to="." method="_on_chat_detection_body_exited"]
